unpackaged/main/default/objects/ET_Service_Request__c/ET_Service_Request__c.object-meta.xml
<CustomObject>
    <label>Service Request</label>
    <nameField>
        <displayFormat>SR-{000000}</displayFormat>
        <label>Service Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>