unpackaged/main/default/objects/ET_Service_Request__c/fields/ET_Account__c.field-meta.xml
<CustomField>
    <fullName>ET_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Requests (Account)</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>