unpackaged/main/default/objects/ET_Service_Request__c/fields/ET_Sales_Agreement__c.field-meta.xml
<CustomField>
    <fullName>ET_Sales_Agreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Agreement</label>
    <referenceTo>ET_Sales_Agreement__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>