unpackaged/main/default/objects/ET_Service_Request__c/fields/ETC_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>ETC_Account_Name__c</fullName>
    <formula>IF(
CASESAFEID(ET_Account__r.RecordTypeId) = $Label.ETC_Person_Account_RecordTypeId ,
ET_Account__r.FirstName + ET_Account__r.LastName ,
ET_Account__r.Name
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>