unpackaged/main/default/objects/ET_Service_Request__c/fields/ETC_Billing_Total__c.field-meta.xml
<CustomField>
    <fullName>ETC_Billing_Total__c</fullName>
    <label>Billing Total(With VAT)</label>
    <summarizedField>ETCAR_Service_Request_Line_Item__c.Total_Booking_Cost_With_Vat__c</summarizedField>
    <summaryFilterItems>
        <field>ETCAR_Service_Request_Line_Item__c.ETCAR_Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>ETCAR_Service_Request_Line_Item__c.ETCAR_Service_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>