unpackaged/main/default/objects/ET_Service_Request__c/fields/ETC_Booking_Confirmed_Amount__c.field-meta.xml
<CustomField>
    <fullName>ETC_Booking_Confirmed_Amount__c</fullName>
    <label>Booking Confirmed Amount</label>
    <summarizedField>ETCAR_Service_Request_Line_Item__c.ETC_Booking_Cost__c</summarizedField>
    <summaryFilterItems>
        <field>ETCAR_Service_Request_Line_Item__c.ETCAR_Status__c</field>
        <operation>equals</operation>
        <value>Booking Confirmed</value>
    </summaryFilterItems>
    <summaryForeignKey>ETCAR_Service_Request_Line_Item__c.ETCAR_Service_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>