unpackaged/main/default/objects/ET_Service_Request__c/fields/ETC_Contact__c.field-meta.xml
<CustomField>
    <fullName>ETC_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>