unpackaged/main/default/objects/ET_Service_Request__c/fields/ETC_Count_of_Confirmed_Bookings__c.field-meta.xml
<CustomField>
    <fullName>ETC_Count_of_Confirmed_Bookings__c</fullName>
    <label>Count of Confirmed Bookings</label>
    <summaryFilterItems>
        <field>ETCAR_Service_Request_Line_Item__c.ETCAR_Status__c</field>
        <operation>equals</operation>
        <value>Booking Confirmed</value>
    </summaryFilterItems>
    <summaryForeignKey>ETCAR_Service_Request_Line_Item__c.ETCAR_Service_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>