unpackaged/main/default/objects/ET_Service_Request__c/fields/ETC_Customer_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>ETC_Customer_Email_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Email Id</label>
    <type>Email</type>
</CustomField>