unpackaged/main/default/objects/ET_Service_Request__c/fields/ETC_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>ETC_Customer_Name__c</fullName>
    <formula>IF( CASESAFEID (ET_Account__r.RecordTypeId) ==  $Label.ETC_Person_Account_RecordTypeId, &quot;SUNDRY PARTIES&quot;,  ET_Account__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>