unpackaged/main/default/objects/ET_Service_Request__c/fields/ETC_Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>ETC_Flight_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Flight Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>