unpackaged/main/default/objects/ET_Service_Request__c/fields/ETC_Instructions_To_Driver__c.field-meta.xml
<CustomField>
    <fullName>ETC_Instructions_To_Driver__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Instructions To Driver</label>
    <type>TextArea</type>
</CustomField>