unpackaged/main/default/objects/ET_Service_Request__c/fields/ETC_Is_Booking_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>ETC_Is_Booking_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Booking Cancelled</label>
    <type>Checkbox</type>
</CustomField>