unpackaged/main/default/objects/ET_Service_Request__c/fields/ETC_Miscellaneous_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>ETC_Miscellaneous_Payment_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Miscellaneous Payment Date</label>
    <type>DateTime</type>
</CustomField>