unpackaged/main/default/objects/ET_Service_Request__c/fields/ETC_Miscellaneous_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>ETC_Miscellaneous_Payment_Status__c</fullName>
    <label>Miscellaneous Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Await3D</fullName>
            </value>
            <value>
                <fullName>Captured</fullName>
            </value>
            <value>
                <fullName>Partially Paid</fullName>
            </value>
            <value>
                <fullName>Payment Success</fullName>
            </value>
            <value>
                <fullName>Refund Requested</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>