unpackaged/main/default/objects/ET_Service_Request__c/fields/ETC_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>ETC_Payment_Date__c</fullName>
    <description>Captures Payment Success Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Payment Date</label>
    <type>DateTime</type>
</CustomField>