unpackaged/main/default/objects/ET_Service_Request__c/fields/ETC_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>ETC_Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Initiated</fullName>
                <default>true</default>
                <label>Not Initiated</label>
            </value>
            <value>
                <fullName>Await3D</fullName>
            </value>
            <value>
                <fullName>Captured</fullName>
            </value>
            <value>
                <fullName>Partially Paid</fullName>
            </value>
            <value>
                <fullName>Payment Success</fullName>
            </value>
            <value>
                <fullName>Refund Requested</fullName>
            </value>
            <value>
                <fullName>Refund Cancelled</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Reversed</fullName>
            </value>
            <value>
                <fullName>On Premise Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>