unpackaged/main/default/objects/ET_Service_Request__c/fields/ETC_Post_Service_Payment__c.field-meta.xml
<CustomField>
    <fullName>ETC_Post_Service_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Service Payment</label>
    <type>Checkbox</type>
</CustomField>