unpackaged/main/default/objects/ET_Service_Request__c/fields/ETC_Send_Payment_Link__c.field-meta.xml
<CustomField>
    <fullName>ETC_Send_Payment_Link__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Payment Link</label>
    <type>Checkbox</type>
</CustomField>