unpackaged/main/default/objects/ET_Service_Request__c/fields/ETCAR_Age__c.field-meta.xml
<CustomField>
    <fullName>ETCAR_Age__c</fullName>
    <label>Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>