unpackaged/main/default/objects/ET_Service_Request__c/fields/ETCAR_Drop_Off_Zone__c.field-meta.xml
<CustomField>
    <fullName>ETCAR_Drop_Off_Zone__c</fullName>
    <label>Drop Off Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Zone A</fullName>
            </value>
            <value>
                <fullName>Zone B</fullName>
            </value>
            <value>
                <fullName>Zone C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>