unpackaged/main/default/objects/ET_Service_Request__c/fields/ETCAR_Status__c.field-meta.xml
<CustomField>
    <fullName>ETCAR_Status__c</fullName>
    <label>Booking Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Booking Confirmed</fullName>
            </value>
            <value>
                <fullName>Vehicle Delivered</fullName>
            </value>
            <value>
                <fullName>Vehicle Collected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>