unpackaged/main/default/objects/ET_Service_Request__c/fields/ETCARS_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>ETCARS_Customer_Type__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visitor</fullName>
            </value>
            <value>
                <fullName>Resident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>