unpackaged/main/default/objects/ET_Service_Request__c/fields/ETI_Inspection_Center__c.field-meta.xml
<CustomField>
    <fullName>ETI_Inspection_Center__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Inspection Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>