unpackaged/main/default/objects/ET_Service_Request__c/fields/ETI_Is_External_Bookings_Notified__c.field-meta.xml
<CustomField>
    <fullName>ETI_Is_External_Bookings_Notified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is External Bookings Notified?</label>
    <type>Checkbox</type>
</CustomField>