unpackaged/main/default/objects/ET_Service_Request__c/fields/ETI_Is_Receipt_Sent__c.field-meta.xml
<CustomField>
    <fullName>ETI_Is_Receipt_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Receipt Sent</label>
    <type>Checkbox</type>
</CustomField>