unpackaged/main/default/objects/ET_Service_Request__c/fields/ETI_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>ETI_Transaction_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Transaction Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>