unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Academic_Year_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ETST_Academic_Year_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Academic Year End Date</label>
    <type>Date</type>
</CustomField>