unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Activation_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>ETST_Activation_Effective_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Activation Effective Date</label>
    <type>Date</type>
</CustomField>