unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Area_Zone__c.field-meta.xml
<CustomField>
    <fullName>ETST_Area_Zone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>