unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Building_Number__c.field-meta.xml
<CustomField>
    <fullName>ETST_Building_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Building  Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>