unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Cancellation_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ETST_Cancellation_End_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancellation End Date</label>
    <type>Date</type>
</CustomField>