unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>ETST_Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not satisfied with services</fullName>
            </value>
            <value>
                <fullName>Temporary cancellation or holding service</fullName>
            </value>
            <value>
                <fullName>Changing school</fullName>
            </value>
            <value>
                <fullName>Leaving the country</fullName>
            </value>
            <value>
                <fullName>New Address not covered</fullName>
            </value>
            <value>
                <fullName>I will come back later</fullName>
                <isActive>false</isActive>
                <label>I will come back later</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>