unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Change_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>ETST_Change_Request_Type__c</fullName>
    <label>Change Request Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pickup Location</fullName>
            </value>
            <value>
                <fullName>Dropoff Location</fullName>
            </value>
            <value>
                <fullName>Transport Type</fullName>
            </value>
            <value>
                <fullName>Service Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>