unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>ETST_Coordinator__c</fullName>
    <formula>ETST_Student__r.ETST_School__r.ETST_Coordinator__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coordinator</label>
    <type>Text</type>
</CustomField>