unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Coordinator_Email__c.field-meta.xml
<CustomField>
    <fullName>ETST_Coordinator_Email__c</fullName>
    <formula>Owner:User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coordinator Email</label>
    <type>Text</type>
</CustomField>