unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Coordinator_Name__c.field-meta.xml
<CustomField>
    <fullName>ETST_Coordinator_Name__c</fullName>
    <formula>Owner:User.FirstName +&#39; &#39;+ Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coordinator Name</label>
    <type>Text</type>
</CustomField>