unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Drop_of_Time__c.field-meta.xml
<CustomField>
    <fullName>ETST_Drop_of_Time__c</fullName>
    <label>Drop of Time</label>
    <type>Time</type>
</CustomField>