unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Dropoff_Land_Mark__c.field-meta.xml
<CustomField>
    <fullName>ETST_Dropoff_Land_Mark__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dropoff Land Mark</label>
    <length>255</length>
    <type>Text</type>
</CustomField>