unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_DropOff_Location_Link__c.field-meta.xml
<CustomField>
    <fullName>ETST_DropOff_Location_Link__c</fullName>
    <formula>HYPERLINK(&quot;http://www.google.com/maps/search/?api=1&amp;query=&quot; + IF( ETST_Dropoff_Location__Latitude__s&lt; 1,&quot;0&quot; + TEXT ( ETST_Dropoff_Location__Latitude__s), TEXT( ETST_Dropoff_Location__Latitude__s))+ &quot;,&quot; + IF(ETST_Dropoff_Location__Longitude__s&lt; 1, &quot;0&quot; + TEXT(ETST_Dropoff_Location__Longitude__s), TEXT (ETST_Dropoff_Location__Longitude__s)),&quot;View DropOff Location in Maps&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DropOff Location Link</label>
    <type>Text</type>
</CustomField>