unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Dropoff_State__c.field-meta.xml
<CustomField>
    <fullName>ETST_Dropoff_State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Dropoff State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>