unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>ETST_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Sent</label>
    <type>Checkbox</type>
</CustomField>