unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Fare_Charges__c.field-meta.xml
<CustomField>
    <fullName>ETST_Fare_Charges__c</fullName>
    <label>Fare Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>