unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>ETST_Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>