unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Is_Monthly_Renewal_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>ETST_Is_Monthly_Renewal_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Monthly Renewal Email Sent?</label>
    <type>Checkbox</type>
</CustomField>