unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Is_Renewed__c.field-meta.xml
<CustomField>
    <fullName>ETST_Is_Renewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Renewed</label>
    <type>Checkbox</type>
</CustomField>