unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Land_Mark__c.field-meta.xml
<CustomField>
    <fullName>ETST_Land_Mark__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pickup Land Mark</label>
    <type>TextArea</type>
</CustomField>