unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Paid_By__c.field-meta.xml
<CustomField>
    <fullName>ETST_Paid_By__c</fullName>
    <label>Paid By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
                <default>true</default>
                <label>Self</label>
            </value>
            <value>
                <fullName>Employer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>