unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Parent__c.field-meta.xml
<CustomField>
    <fullName>ETST_Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Transport_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>