unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Parent_Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>ETST_Parent_Cancellation_Reason__c</fullName>
    <label>Parent Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I want to change my service details</fullName>
            </value>
            <value>
                <fullName>Pickup/drop off timings provided by coordinator not suitable.</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>