unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Payee__c.field-meta.xml
<CustomField>
    <fullName>ETST_Payee__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Payee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>