unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Pick_Up_Time__c.field-meta.xml
<CustomField>
    <fullName>ETST_Pick_Up_Time__c</fullName>
    <label>Pickup Time</label>
    <type>Time</type>
</CustomField>