unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Pickup_Location__c.field-meta.xml
<CustomField>
    <fullName>ETST_Pickup_Location__c</fullName>
    <formula>IMAGE(&#39;https://maps.googleapis.com/maps/api/staticmap?key=AIzaSyCt_xIMbujSvplE13UJeTHdpzFUAPhiWX4&amp;zoom=13&amp;size=300x200&amp;markers=color:green|label:S|&#39;+ TEXT(ETST_Location__Latitude__s) + &#39;,&#39; + TEXT(ETST_Location__Latitude__s), &#39;Title&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pickup Location</label>
    <type>Text</type>
</CustomField>