unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Prev_Dropoff_Loc__c.field-meta.xml
<CustomField>
    <fullName>ETST_Prev_Dropoff_Loc__c</fullName>
    <label>Prev Dropoff Loc</label>
    <scale>8</scale>
    <type>Location</type>
</CustomField>