unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Prev_Status__c.field-meta.xml
<CustomField>
    <fullName>ETST_Prev_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prev Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>