unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Price_List__c.field-meta.xml
<CustomField>
    <fullName>ETST_Price_List__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price List</label>
    <referenceTo>ETST_Price_List__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>