unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Reason_for_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>ETST_Reason_for_Cancellation__c</fullName>
    <label>Cancellation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Permanent Cancellation</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>