unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>ETST_Refund_Amount__c</fullName>
    <label>Refund Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>