unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_School_Name__c.field-meta.xml
<CustomField>
    <fullName>ETST_School_Name__c</fullName>
    <formula>ETST_Student__r.ETST_School_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>School Name</label>
    <type>Text</type>
</CustomField>