unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Service_Duration_in_Days__c.field-meta.xml
<CustomField>
    <fullName>ETST_Service_Duration_in_Days__c</fullName>
    <formula>ETST_Pick_Up_End_Date__c-TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Duration in Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>