unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>ETST_Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Half Yearly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>On-demand</fullName>
            </value>
            <value>
                <fullName>Select Dates</fullName>
            </value>
            <value>
                <fullName>One Way</fullName>
            </value>
            <value>
                <fullName>Hourly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>