unpackaged/main/default/objects/ET_Service_Request__c/fields/ETST_State_or_Province__c.field-meta.xml
<CustomField>
    <fullName>ETST_State_or_Province__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>State or Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>